Padronização do estilo de código Comentários para indicar o funcionamento dos botões

--- a/atualizacoes.html
+++ b/atualizacoes.html
@@ -22,19 +22,15 @@
         </section>
         <!--Resultados-->
         <section class="column">
-            <h1>Resultados</h1>
+            <h1>Atualizar</h1>
             <ul>
                 <li class="card width:total bg:surface">
                     <div><img class="card:icon icon" src="res/img/alt_package/firefox.svg" alt=""></div>
                     <div class="card:text">
                         <p><strong>Mozilla Firefox ESR</strong></p>
                         <div class="card:actions">
-                            <button class="btn:default">Detalhes</button> <!--Sempre aparecer-->
-                            <button class="btn:install">Instalar</button> <!--Só aparecer se não estiver instalado-->
-                            <!--Só aparecer se já estiver instalado
-                            <button class="btn:install flex:1">Abrir</button>
+                            <button class="btn:install flex:1">Atualizar</button>
                             <button class="btn:uninstall flex:1">Desinstalar</button>
-                            -->
                         </div>
                     </div>
                 </li>
