--- a/detalhes.html
+++ b/detalhes.html
@@ -9,28 +9,33 @@
         <link rel="manifest" href="res/manifest.json">
     </head>
     <body>
-        <section id="pesquisar-atualizar">
-            <div id="pesquisar">
-                <button><img src="res/img/ic_back.svg" alt="voltar"></button>
-                <input type="search" placeholder="Faça uma pesquisa">
-                <button><img src="res/img/ic_search.svg" alt="Pesquisar"></button>
-            </div>
+        <!--Ações rápidas-->
+        <section class="width:total">
+            <button class="btn:default flex:1">Instalados</button>
+            <button class="btn:default flex:1">Procurar atualizaçães</button>
         </section>
-        <section id="detalhes">
-            <div class="detalhes:header">
-                <div><img class="detalhes:icon" src="res/img/alt_package/firefox.svg" alt=""></div>
+        <!--Pesquisa-->
+        <section class="width:total">
+            <button class="bg:surface btn:default w:32"><img src="res/img/ic_back.svg" alt="Voltar"></button>
+            <input class="bg:surface flex:1" type="search" placeholder="Faça uma pesquisa">
+            <button class="bg:surface btn:default w:32"><img src="res/img/ic_search.svg" alt="Pesquisar"></button>
+        </section>
+
+        <section class="column">
+            <div class="card bg:surface">
+                <div><img class="icon" src="res/img/alt_package/firefox.svg" alt=""></div>
                 <div>
-                    <p class="detalhes:titulo"><strong>Mozilla Firefox ESR</strong></p>
-                    <p class="detalhes:desc">Firefox ESR is a powerful, extensible web browser with support for modern web application technologies.</p>
+                    <h1>Mozilla Firefox ESR</h1>
+                    <p>Firefox ESR is a powerful, extensible web browser with support for modern web application technologies.</p>
                 </div>
             </div>
-            <div class="detalhes:actions">
-                <button>Instalar</button>
-                <button>Atualizar</button>
-                <button>Abrir</button>
-                <button>Desinstalar</button>
+            <div class="card:actions">
+                <button class="btn:install">Instalar</button> <!--Só aparecer se não estiver instalado-->
+                <button class="btn:install">Atualizar</button> <!--Só aparecer se houver atualização-->
+                <button class="btn:install flex:1">Abrir</button>  <!--Só aparecer se já estiver instalado -->
+                <button class="btn:uninstall flex:1">Desinstalar</button> <!--Só aparecer se já estiver instalado -->
             </div>
-            <div class="detalhes:screenshots">
+            <div class="card:screenshots">
                 <img src="res/img/alt_package/screenshots/large-6818f64184ffec231f0f52ae1ed22860.png" alt="">
                 <img src="res/img/alt_package/screenshots/large-686a278a090a2c1eeed4d521ec54a565.png" alt="">
                 <img src="res/img/alt_package/screenshots/large-9881e51d01b668732f071a66f648b428.png" alt="">
