--- a/index.html
+++ b/index.html
@@ -9,32 +9,40 @@
         <link rel="manifest" href="res/manifest.json">
     </head>
     <body>
-        <section id="header">
-            <div class="header:logo">
-                <img src="res/img/icon-192.png" alt="Icon">
-            </div>
+        <!--Ações rápidas-->
+        <section class="width:total">
+            <button class="btn:default flex:1">Instalados</button>
+            <button class="btn:default flex:1">Procurar atualizaçães</button>
+        </section>
+        <!--cabeçalho-->
+        <section>
+            <img class="icon:logo" src="res/img/icon-192.png" alt="Icon">
             <div class="header:desc">
                 <h1>Central de aplicativos</h1>
                 <p>Pesquise, baixe, atualize.</p>
             </div>
         </section>
-        <section id="pesquisar-atualizar">
-            <div id="pesquisar">
-                <input type="search" placeholder="Faça uma pesquisa">
-                <button><img src="res/img/ic_search.svg" alt="Pesquisar"></button>
-            </div>
+        <!--Pesquisa-->
+        <section class="width:total">
+            <input class="bg:surface flex:1" type="search" placeholder="Faça uma pesquisa">
+            <button class="bg:surface btn:default w:32"><img src="res/img/ic_search.svg" alt="Pesquisar"></button>
         </section>
-        <section id="recomendados">
+        
+        <!--Resultados-->
+        <section class="column">
             <h1>Recomendados</h1>
             <ul>
-                <li>
-                    <div><img class="recomendados:icon" src="res/img/alt_package/firefox.svg" alt=""></div>
-                    <div>
-                        <p class="recomendados:titulo"><strong>Mozilla Firefox ESR</strong></p>
-
-                        <div>
-                            <button>Detalhes</button>
-                            <button>Instalar</button>
+                <li class="card width:total bg:surface">
+                    <div><img class="card:icon icon" src="res/img/alt_package/firefox.svg" alt=""></div>
+                    <div class="card:text">
+                        <p><strong>Mozilla Firefox ESR</strong></p>
+                        <div class="card:actions">
+                            <button class="btn:default">Detalhes</button> <!--Sempre aparecer-->
+                            <button class="btn:install">Instalar</button> <!--Só aparecer se não estiver instalado-->
+                            <!--Só aparecer se já estiver instalado
+                            <button class="btn:install flex:1">Abrir</button>
+                            <button class="btn:uninstall flex:1">Desinstalar</button>
+                            -->
                         </div>
                     </div>
                 </li>
