--- a/instalados.html
+++ b/instalados.html
@@ -9,32 +9,30 @@
         <link rel="manifest" href="res/manifest.json">
     </head>
     <body>
-        <!--Ações rápidas-->
-        <section class="width:total">
-            <button class="btn:default flex:1">Instalados</button>
-            <button class="btn:default flex:1">Procurar atualizaçães</button>
-        </section>
+        
         <!--Pesquisa-->
         <section class="width:total">
             <button class="bg:surface btn:default w:32"><img src="res/img/ic_back.svg" alt="Voltar"></button>
             <input class="bg:surface flex:1" type="search" placeholder="Faça uma pesquisa">
             <button class="bg:surface btn:default w:32"><img src="res/img/ic_search.svg" alt="Pesquisar"></button>
         </section>
+        <!--Ações rápidas-->
+        <section class="width:total">
+            
+            <button class="btn:default flex:1">Instalados</button>
+            <button class="btn:default flex:1">Procurar atualizaçães</button>
+        </section>
         <!--Resultados-->
         <section class="column">
-            <h1>Resultados</h1>
+            <h1>Instalados</h1>
             <ul>
                 <li class="card width:total bg:surface">
                     <div><img class="card:icon icon" src="res/img/alt_package/firefox.svg" alt=""></div>
                     <div class="card:text">
                         <p><strong>Mozilla Firefox ESR</strong></p>
                         <div class="card:actions">
-                            <button class="btn:default">Detalhes</button> <!--Sempre aparecer-->
-                            <button class="btn:install">Instalar</button> <!--Só aparecer se não estiver instalado-->
-                            <!--Só aparecer se já estiver instalado
-                            <button class="btn:install flex:1">Abrir</button>
-                            <button class="btn:uninstall flex:1">Desinstalar</button>
-                            -->
+                            <button class="btn:install flex:1">Abrir</button> <!--Só aparecer se já estiver instalado-->
+                            <button class="btn:uninstall flex:1">Desinstalar</button> <!--Só aparecer se já estiver instalado-->
                         </div>
                     </div>
                 </li>
