--- a/index.html
+++ b/index.html
@@ -2,11 +2,37 @@
 <html lang="">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
         <title id="titulo">Central de aplicativos</title>
         <meta name="description" content="Encontre, baixe, atualize aplicativos para o sistema">
         <link rel="stylesheet" href="res/styles/index.css">
         <link rel="manifest" href="res/manifest.json">
+        <link rel="alternate" type="application/rss+xml" href="">
+        <link rel="search" href="/opensearch.xml" type="application/opensearchdescription+xml" title="Central de aplicativos Andistro">
+
+        <!--[OG TAGS]-->
+        <meta property="og:site_name" content="Central de aplicativos AnDistro">
+        <meta property="og:type" content="website">
+        <meta property="og:url" content="https://andistro.github.io/software-center"> <!--URL do site-->
+
+        <!--[MICROSOFT TAGS]-->
+        <meta name="msapplication-TileColor" content=""> <!--Cor HEX-->
+        <meta name="msapplication-TileImage" content=""> <!--Imagem quadrada-->
+
+        <!--[TAGS DE VERIFICAÇÃO]-->
+        <meta name="google-site-verification" content="">
+        <meta name="msvalidate.01" content="">
+        <meta name="yandex-verification" content="">
+
+        <!--[SCHEMA.ORG]-->
+        <script type="application/ld+json">
+            {
+            "@type": "WebPage",
+            "name": "Central de aplicativos AnDistro |",
+            "url": "https://andistro.github.io/software-center",
+            "@context": "http://schema.org"
+            }
+        </script>
     </head>
     <body>
         <!--Ações rápidas-->
