--- a/index.html
+++ b/index.html
@@ -35,45 +35,44 @@
         </script>
     </head>
     <body>
-        <!--Ações rápidas-->
-        <section class="width:total">
-            <button class="btn:default flex:1">Instalados</button>
-            <button class="btn:default flex:1">Procurar atualizaçães</button>
-        </section>
-        <!--cabeçalho-->
-        <section>
-            <img class="icon:logo" src="res/img/icon-192.png" alt="Icon">
-            <div class="header:desc">
-                <h1>Central de aplicativos</h1>
-                <p>Pesquise, baixe, atualize.</p>
-            </div>
-        </section>
-        <!--Pesquisa-->
-        <section class="width:total">
-            <input class="bg:surface flex:1" type="search" placeholder="Faça uma pesquisa">
-            <button class="bg:surface btn:default w:32"><img src="res/img/ic_search.svg" alt="Pesquisar"></button>
-        </section>
-        
-        <!--Resultados-->
-        <section class="column">
-            <h1>Recomendados</h1>
-            <ul>
-                <li class="card width:total bg:surface">
-                    <div><img class="card:icon icon" src="res/img/alt_package/firefox.svg" alt=""></div>
-                    <div class="card:text">
-                        <p><strong>Mozilla Firefox ESR</strong></p>
-                        <div class="card:actions">
-                            <button class="btn:default">Detalhes</button> <!--Sempre aparecer-->
-                            <button class="btn:install">Instalar</button> <!--Só aparecer se não estiver instalado-->
-                            <!--Só aparecer se já estiver instalado
-                            <button class="btn:install flex:1">Abrir</button>
-                            <button class="btn:uninstall flex:1">Desinstalar</button>
-                            -->
-                        </div>
-                    </div>
-                </li>
-            </ul>
+        <div class="app">
+            <aside class="menu">
+                <div class="logo">
+                    <img src="res/img/ic_logo.svg" alt="Início">
+                </div>
 
-        </section>
+                <button class="menu-btn active">
+                    <img src="res/img/ic_home_active.svg" alt="Início">
+                    <span>Inicio</span>
+                </button>
+
+                <button class="menu-btn">
+                    <img src="res/img/ic_apps.svg" alt="Aplicativos">
+                    <span>Instalados</span>
+                </button>
+
+                <button class="menu-btn">
+                    <img src="res/img/ic_update.svg" alt="Atualizações">
+                    <span>Procurar atualizações</span>
+                </button>
+            </aside>
+
+            <section class="content">
+                <header class="pesquisa">
+                    <input type="text" placeholder="Faça uma pesquisa">
+                    <button class="btn-search">
+                        <img src="res/img/ic_search.svg" alt="Buscar">
+                    </button>
+                </header>
+
+                <!--recomendados.js-->
+                <section class="recomendados">
+                    <h2 class="title">Recomendados</h2>
+                    <div id="cards-container"></div>
+                </section>
+            </section>
+        </div>
+
+        <script src="recomendados.js"></script>
     </body>
 </html>
