Adiciona novas páginas HTML e atualiza o estilo para a seção de aplicativos

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 </header>
 
                 <!--recomendados.js-->
-                <section class="recomendados">
+                <section class="main">
                     <h2 class="title">Recomendados</h2>
                     <div id="cards-container"></div>
                 </section>
