A página de detalhes agora exibe os detalhes do pacote. O index agora exibe a descrição do pacote

--- a/detalhes.html
+++ b/detalhes.html
@@ -41,8 +41,8 @@
                     <img src="res/img/ic_logo.svg" alt="Início">
                 </div>
 
-                <button class="menu-btn active">
-                    <img src="res/img/ic_home_active.svg" alt="Início">
+                <button class="menu-btn">
+                    <img src="res/img/ic_home.svg" alt="Início">
                     <span>Inicio</span>
                 </button>
 
@@ -64,11 +64,13 @@
                         <img src="res/img/ic_search.svg" alt="Buscar">
                     </button>
                 </header>
-
-                <!--recomendados.js-->
                 <section class="main">
-                    <h2 class="title">Instalados</h2>
-                    <div id="cards-container"></div>
+                    <div id="cards-container">
+                    </div>
+
+                    <div id="carrossel">
+                        <!--carrossel de imagens provindas do https://screenshots.debian.net/package/ -->
+                    </div>
                 </section>
             </section>
         </div>
