* Troca do CRLF para LF * Adicionado um detector de sistema

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 </section>
             </section>
         </div>
-
+        <script src="detect.js"></script>
         <script src="recomendados.js"></script>
     </body>
 </html>
