Adicionado a ferramenta de busca de pacotes criada pelo Perplexity

--- a/resultados.html
+++ b/resultados.html
@@ -58,14 +58,14 @@
             </aside>
 
             <section class="content">
-                <header class="pesquisa">
-                    <input type="text" placeholder="Faça uma pesquisa">
-                    <button class="btn-search">
-                        <img src="res/img/ic_search.svg" alt="Buscar">
-                    </button>
-                </header>
+                <form class="pesquisa" id="search-form">
+  <input id="search-input" type="text" placeholder="Faça uma pesquisa">
+  <button id="search-btn" class="btn-search" type="submit">
+    <img src="res/img/ic_search.svg" alt="Buscar">
+  </button>
+</form>
 
-                <!--recomendados.js-->
+
                 <section class="main">
                     <h2 class="title">Resultados</h2>
                     <div id="cards-container"></div>
