adição do opensearch.xml caso o icone não exista, apareça o icone quebrado.

--- a/atualizacoes.html
+++ b/atualizacoes.html
@@ -7,7 +7,6 @@
         <meta name="description" content="Encontre, baixe, atualize aplicativos para o sistema">
         <link rel="stylesheet" href="res/styles/index.css">
         <link rel="manifest" href="res/manifest.json">
-        <link rel="alternate" type="application/rss+xml" href="">
         <link rel="search" href="/opensearch.xml" type="application/opensearchdescription+xml" title="Central de aplicativos Andistro">
 
         <!--[OG TAGS]-->
@@ -37,33 +36,41 @@
     <body>
         <div class="app">
             <aside class="menu">
-                <div class="logo">
-                    <img src="res/img/ic_logo.svg" alt="Início">
-                </div>
+                <a href="index.html">
+                    <div class="logo">
+                        <img src="res/img/ic_logo.svg" alt="Início">
+                    </div>
+                </a>
 
-                <button class="menu-btn active">
-                    <img src="res/img/ic_home_active.svg" alt="Início">
-                    <span>Inicio</span>
-                </button>
+                <a href="index.html">
+                    <button class="menu-btn">
+                        <img src="res/img/ic_home.svg" alt="Início">
+                        <span>Inicio</span>
+                    </button>
+                </a>
 
-                <button class="menu-btn">
-                    <img src="res/img/ic_apps.svg" alt="Aplicativos">
-                    <span>Instalados</span>
-                </button>
+                <a href="instalados.html">
+                    <button class="menu-btn">
+                        <img src="res/img/ic_apps.svg" alt="Aplicativos">
+                        <span>Instalados</span>
+                    </button>
+                </a>
 
-                <button class="menu-btn">
-                    <img src="res/img/ic_update.svg" alt="Atualizações">
-                    <span>Procurar atualizações</span>
-                </button>
+                <a href="#">
+                    <button class="menu-btn active">
+                        <img src="res/img/ic_update_active.svg" alt="Atualizações">
+                        <span>Procurar atualizações</span>
+                    </button>
+                </a>
             </aside>
 
             <section class="content">
-                <header class="pesquisa">
-                    <input type="text" placeholder="Faça uma pesquisa">
-                    <button class="btn-search">
+                <form class="pesquisa" id="search-form">
+                    <input id="search-input" type="text" placeholder="Faça uma pesquisa">
+                    <button id="search-btn" class="btn-search" type="submit">
                         <img src="res/img/ic_search.svg" alt="Buscar">
                     </button>
-                </header>
+                </form>
 
                 <!--recomendados.js-->
                 <section class="main">
@@ -72,7 +79,28 @@
                 </section>
             </section>
         </div>
-
+        <script src="detect.js"></script>
         <script src="atualizacoes.js"></script>
+        <script>
+            // para as pesquisas
+            const form = document.getElementById("search-form");
+            const input = document.getElementById("search-input");
+
+            form.addEventListener("submit", (e) => {
+            e.preventDefault();
+
+            const termo = input.value.trim();
+            if (!termo) return;
+
+            // pega todos os parâmetros atuais da URL
+            const currentParams = new URLSearchParams(window.location.search);
+
+            // força/atualiza o q={searchTerms}
+            currentParams.set("q", termo);
+
+            const qs = currentParams.toString();
+            window.location.href = `resultados.html?${qs}`;
+            });
+        </script>
     </body>
 </html>
