Ajustando o código para o site interagir com o AnDistro

--- a/detalhes.html
+++ b/detalhes.html
@@ -36,24 +36,32 @@
     <body>
         <div class="app">
             <aside class="menu">
-                <div class="logo">
-                    <img src="res/img/ic_logo.svg" alt="Início">
-                </div>
+                <a href="index.html">
+                    <div class="logo">
+                        <img src="res/img/ic_logo.svg" alt="Início">
+                    </div>
+                </a>
 
-                <button class="menu-btn">
-                    <img src="res/img/ic_home.svg" alt="Início">
-                    <span>Inicio</span>
-                </button>
+                <a href="index.html">
+                    <button class="menu-btn">
+                        <img src="res/img/ic_home.svg" alt="Início">
+                        <span>Inicio</span>
+                    </button>
+                </a>
 
-                <button class="menu-btn">
-                    <img src="res/img/ic_apps.svg" alt="Aplicativos">
-                    <span>Instalados</span>
-                </button>
+                <a href="#">
+                    <button class="menu-btn active">
+                        <img src="res/img/ic_apps_active.svg" alt="Aplicativos">
+                        <span>Instalados</span>
+                    </button>
+                </a>
 
-                <button class="menu-btn">
-                    <img src="res/img/ic_update.svg" alt="Atualizações">
-                    <span>Procurar atualizações</span>
-                </button>
+                <a href="atualizacoes.html">
+                    <button class="menu-btn">
+                        <img src="res/img/ic_update.svg" alt="Atualizações">
+                        <span>Procurar atualizações</span>
+                    </button>
+                </a>
             </aside>
 
             <section class="content">
