--- a/detalhes.html
+++ b/detalhes.html
@@ -82,7 +82,7 @@
             </section>
         </div>
         <script src="detect.js"></script>
-        <script src="detalhes.js"></script>
+        <script src="detalhes.js?v=2"></script>
         <script>
             // para as pesquisas
             const form = document.getElementById("search-form");
