--- a/resultados.html
+++ b/resultados.html
@@ -36,13 +36,13 @@
     <body>
         <div class="app">
             <aside class="menu">
-                <a href="/">
+                <a href="index.html">
                     <div class="logo">
                         <img src="res/img/ic_logo.svg" alt="Início">
                     </div>
                 </a>
 
-                <a href="/">
+                <a href="index.html">
                     <button class="menu-btn">
                         <img src="res/img/ic_home_active.svg" alt="Início">
                         <span data-i18n="navigation.home">Início</span>
