Correção de código

--- a/atualizacoes.html
+++ b/atualizacoes.html
@@ -50,7 +50,7 @@
                 </a>
 
                 <a href="instalados.html">
-                    <button class="menu-btn active">
+                    <button class="menu-btn">
                         <img src="res/img/ic_apps.svg" alt="Aplicativos">
                         <span data-i18n="navigation.installed">Instalados</span>
                     </button>
